Added all images. Started ch3.

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -246,6 +246,10 @@ section
   text-transform: uppercase
   line-height: 1.3
 
+  strong
+    color: $green
+    font-weight: normal
+
 .major-alt
   @extend .major
   font-size: 20px
@@ -285,6 +289,12 @@ section
     span
       display: inline-block
       margin: 0 .5em
+
+
+// Extra
+
+.credits
+  display: none
 
 
 // Animations
