--- a/css/style.css
+++ b/css/style.css
@@ -219,13 +219,14 @@ section {
       font-size: 44px;
       margin: 0; }
     /* line 147, sass/_base.sass */
-    section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p, .chapter-2-a-snapshot article section.chapter_title p {
+    section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p, .chapter-2-a-snapshot article section.chapter_title p, .chapter-3-working-for-the-nest-egg article section.chapter_title p {
       border-bottom: 2px solid rgba(255, 255, 255, 0.6); }
     /* line 150, sass/_base.sass */
-    section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p, .chapter-2-a-snapshot article section.chapter_title p,
+    section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p, .chapter-2-a-snapshot article section.chapter_title p, .chapter-3-working-for-the-nest-egg article section.chapter_title p,
     section.chapter_title.on_dark_background h2,
     .chapter-1-rethinking-retirement article section.chapter_title h2,
-    .chapter-2-a-snapshot article section.chapter_title h2 {
+    .chapter-2-a-snapshot article section.chapter_title h2,
+    .chapter-3-working-for-the-nest-egg article section.chapter_title h2 {
       color: white;
       text-shadow: #383838 0 0 25px; }
   /* line 156, sass/_base.sass */
@@ -292,7 +293,7 @@ section {
       background-position: left; }
   /* line 203, sass/_base.sass */
   section.quotation.paul .contents {
-    background-image: url('../img/1/paul.jpg?1369452927');
+    background-image: url('../img/1/paul.jpg');
     background-repeat: no-repeat;
     background-position: 0 8em; }
   /* line 208, sass/_base.sass */
@@ -339,22 +340,27 @@ section {
 
 /* line 242, sass/_base.sass */
 .major, .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .intro p.first,
-.chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first, .chapter-1-rethinking-retirement article .half_of_american_households p, .chapter-2-a-snapshot article .men_and_women .contents div p {
+.chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first, .chapter-1-rethinking-retirement article .half_of_american_households p, .chapter-2-a-snapshot article .men_and_women .contents div p, .chapter-3-working-for-the-nest-egg article .intro p {
   font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
   font-size: 30px;
   text-align: center;
   text-transform: uppercase;
   line-height: 1.3; }
+  /* line 249, sass/_base.sass */
+  .major strong, .major-alt strong, .chapter-1-rethinking-retirement article .intro p.second strong, .chapter-1-rethinking-retirement article .intro p.first strong,
+  .chapter-1-rethinking-retirement article .intro p.third strong, .chapter-1-rethinking-retirement article .percentage_of_workers p strong, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first strong, .chapter-1-rethinking-retirement article .half_of_american_households p strong, .chapter-2-a-snapshot article .men_and_women .contents div p strong, .chapter-3-working-for-the-nest-egg article .intro p strong {
+    color: #548e85;
+    font-weight: normal; }
 
-/* line 249, sass/_base.sass */
+/* line 253, sass/_base.sass */
 .major-alt, .chapter-1-rethinking-retirement article .intro p.second {
   font-size: 20px; }
 
-/* line 254, sass/_base.sass */
+/* line 258, sass/_base.sass */
 .half-width p, .chapter-1-rethinking-retirement article .outro p {
   width: 50%; }
 
-/* line 257, sass/_base.sass */
+/* line 261, sass/_base.sass */
 .bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .increase_of_workers p span {
   border-top: 2px solid #383838;
   border-bottom: 2px solid #383838;
@@ -362,7 +368,7 @@ section {
   padding: 0.5em 0 0.4em 0;
   width: 75%; }
 
-/* line 264, sass/_base.sass */
+/* line 268, sass/_base.sass */
 .form_question {
   background: #548e85;
   color: white;
@@ -374,70 +380,74 @@ section {
   text-align: center;
   width: 105%; }
 
-/* line 275, sass/_base.sass */
+/* line 279, sass/_base.sass */
 .form_fields {
   background: url('../img/form-background.jpg?1369788223') center bottom repeat-x;
   font-family: "Proxima N W01 Smbd";
   margin: 0 auto;
   overflow: hidden; }
-  /* line 281, sass/_base.sass */
+  /* line 285, sass/_base.sass */
   .form_fields label {
     font-size: 20px;
     text-transform: uppercase; }
-    /* line 285, sass/_base.sass */
+    /* line 289, sass/_base.sass */
     .form_fields label span {
       display: inline-block;
       margin: 0 0.5em; }
 
+/* line 296, sass/_base.sass */
+.credits {
+  display: none; }
+
 @-webkit-keyframes pulse-highlight {
-  /* line 293, sass/_base.sass */
+  /* line 303, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 296, sass/_base.sass */
+  /* line 306, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 299, sass/_base.sass */
+  /* line 309, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @-moz-keyframes pulse-highlight {
-  /* line 293, sass/_base.sass */
+  /* line 303, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 296, sass/_base.sass */
+  /* line 306, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 299, sass/_base.sass */
+  /* line 309, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @-o-keyframes pulse-highlight {
-  /* line 293, sass/_base.sass */
+  /* line 303, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 296, sass/_base.sass */
+  /* line 306, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 299, sass/_base.sass */
+  /* line 309, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @keyframes pulse-highlight {
-  /* line 293, sass/_base.sass */
+  /* line 303, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 296, sass/_base.sass */
+  /* line 306, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 299, sass/_base.sass */
+  /* line 309, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
@@ -646,10 +656,11 @@ header.story_header {
     header.story_header.bordered h1 em {
       background: white; }
   /* line 187, sass/_header.sass */
-  header.story_header.on_dark_background h1, .chapter-1-rethinking-retirement article header.story_header h1, .chapter-2-a-snapshot article header.story_header.chapter_title h1,
+  header.story_header.on_dark_background h1, .chapter-1-rethinking-retirement article header.story_header h1, .chapter-2-a-snapshot article header.story_header.chapter_title h1, .chapter-3-working-for-the-nest-egg article header.story_header.chapter_title h1,
   header.story_header.on_dark_background h1 small,
   .chapter-1-rethinking-retirement article header.story_header h1 small,
-  .chapter-2-a-snapshot article header.story_header.chapter_title h1 small {
+  .chapter-2-a-snapshot article header.story_header.chapter_title h1 small,
+  .chapter-3-working-for-the-nest-egg article header.story_header.chapter_title h1 small {
     color: white; }
 
 /* line 1, sass/_footer.sass */
@@ -735,7 +746,7 @@ footer {
   padding: 24em 0 2em 0; }
   /* line 39, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .chapter_title .background_image {
-    background-image: url('../img/1/path.jpg?1369435802'); }
+    background-image: url('../img/1/path.jpg'); }
 /* line 47, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .pie_slice {
   -webkit-transform-origin: 50px 50px;
@@ -867,7 +878,7 @@ footer {
         margin-bottom: -4px; }
 /* line 129, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers .background_image {
-  background-image: url('../img/1/grumpy_man.jpg?1369442609'); }
+  background-image: url('../img/1/grumpy_man.jpg'); }
 /* line 133, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers p {
   clear: left;
@@ -881,7 +892,7 @@ footer {
   /* line 75, sass/_mixins.sass */
   .chapter-1-rethinking-retirement article .increase_of_workers p .major:after, .chapter-1-rethinking-retirement article .increase_of_workers p .major-alt:after, .chapter-1-rethinking-retirement article .increase_of_workers p .intro p.second:after, .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.second:after, .chapter-1-rethinking-retirement article .increase_of_workers p .intro p.first:after, .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.first:after,
   .chapter-1-rethinking-retirement article .increase_of_workers p .intro p.third:after,
-  .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.third:after, .chapter-1-rethinking-retirement article .increase_of_workers p .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .increase_of_workers p p:after, .chapter-1-rethinking-retirement article .increase_of_workers p .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .increase_of_workers p p.first:after, .chapter-1-rethinking-retirement article .increase_of_workers p .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .increase_of_workers p p:after, .chapter-1-rethinking-retirement .chapter-2-a-snapshot article .increase_of_workers p .men_and_women .contents div p:after, .chapter-2-a-snapshot .chapter-1-rethinking-retirement article .increase_of_workers p .men_and_women .contents div p:after, .chapter-1-rethinking-retirement .chapter-2-a-snapshot article .men_and_women .contents div .increase_of_workers p p:after, .chapter-2-a-snapshot .chapter-1-rethinking-retirement article .men_and_women .contents div .increase_of_workers p p:after {
+  .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.third:after, .chapter-1-rethinking-retirement article .increase_of_workers p .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .increase_of_workers p p:after, .chapter-1-rethinking-retirement article .increase_of_workers p .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .increase_of_workers p p.first:after, .chapter-1-rethinking-retirement article .increase_of_workers p .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .increase_of_workers p p:after, .chapter-1-rethinking-retirement .chapter-2-a-snapshot article .increase_of_workers p .men_and_women .contents div p:after, .chapter-2-a-snapshot .chapter-1-rethinking-retirement article .increase_of_workers p .men_and_women .contents div p:after, .chapter-1-rethinking-retirement .chapter-2-a-snapshot article .men_and_women .contents div .increase_of_workers p p:after, .chapter-2-a-snapshot .chapter-1-rethinking-retirement article .men_and_women .contents div .increase_of_workers p p:after, .chapter-1-rethinking-retirement .chapter-3-working-for-the-nest-egg article .increase_of_workers p .intro p:after, .chapter-3-working-for-the-nest-egg .chapter-1-rethinking-retirement article .increase_of_workers p .intro p:after, .chapter-1-rethinking-retirement .chapter-3-working-for-the-nest-egg article .intro .increase_of_workers p p:after, .chapter-3-working-for-the-nest-egg .chapter-1-rethinking-retirement article .intro .increase_of_workers p p:after {
     content: "";
     display: block;
     margin: 0.75em auto 0;
@@ -916,7 +927,7 @@ footer {
   /* line 75, sass/_mixins.sass */
   .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .major:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .major-alt:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .intro p.second:after, .chapter-1-rethinking-retirement article .intro .one_in_four_workers .contents div p.second:after,
   .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .intro p.third:after,
-  .chapter-1-rethinking-retirement article .intro .one_in_four_workers .contents div p.third:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement .chapter-2-a-snapshot article .one_in_four_workers .men_and_women .contents div p:after, .chapter-2-a-snapshot .chapter-1-rethinking-retirement article .one_in_four_workers .men_and_women .contents div p:after, .chapter-1-rethinking-retirement .chapter-2-a-snapshot article .men_and_women .one_in_four_workers .contents div p:after, .chapter-2-a-snapshot .chapter-1-rethinking-retirement article .men_and_women .one_in_four_workers .contents div p:after {
+  .chapter-1-rethinking-retirement article .intro .one_in_four_workers .contents div p.third:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement .chapter-2-a-snapshot article .one_in_four_workers .men_and_women .contents div p:after, .chapter-2-a-snapshot .chapter-1-rethinking-retirement article .one_in_four_workers .men_and_women .contents div p:after, .chapter-1-rethinking-retirement .chapter-2-a-snapshot article .men_and_women .one_in_four_workers .contents div p:after, .chapter-2-a-snapshot .chapter-1-rethinking-retirement article .men_and_women .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement .chapter-3-working-for-the-nest-egg article .one_in_four_workers .contents div .intro p:after, .chapter-3-working-for-the-nest-egg .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .intro p:after, .chapter-1-rethinking-retirement .chapter-3-working-for-the-nest-egg article .intro .one_in_four_workers .contents div p:after, .chapter-3-working-for-the-nest-egg .chapter-1-rethinking-retirement article .intro .one_in_four_workers .contents div p:after {
     content: "";
     display: block;
     margin: 0.75em auto 0;
@@ -924,7 +935,7 @@ footer {
     border-bottom: 2px solid #383838; }
 /* line 165, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .half_of_american_households .background_image {
-  background-image: url('../img/1/jars.jpg?1369445831'); }
+  background-image: url('../img/1/jars.jpg'); }
 /* line 168, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .half_of_american_households p {
   clear: left;
@@ -944,7 +955,7 @@ footer {
     border-bottom: 2px solid #383838; }
 /* line 175, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .working_about_the_right_amount .contents {
-  background-image: url('../img/1/quoter.jpg?1369452684'); }
+  background-image: url('../img/1/quoter.jpg'); }
 /* line 184, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .outro .second {
   font-family: "Adobe Caslon W01 Bd";
@@ -1140,6 +1151,34 @@ footer {
 /* line 196, sass/_chapter2.sass */
 .chapter-2-a-snapshot article .dante_chinni h2 {
   font-size: 50px; }
+
+/* line 2, sass/_chapter3.sass */
+.chapter-3-working-for-the-nest-egg article .chapter_title {
+  padding: 5em 0 30em; }
+  /* line 6, sass/_chapter3.sass */
+  .chapter-3-working-for-the-nest-egg article .chapter_title .background_image {
+    background-image: url('../img/3/house-large.jpg?1369782868');
+    background-position: center -200px; }
+  /* line 10, sass/_chapter3.sass */
+  .chapter-3-working-for-the-nest-egg article .chapter_title .contents {
+    max-width: 900px; }
+  /* line 13, sass/_chapter3.sass */
+  .chapter-3-working-for-the-nest-egg article .chapter_title h2 {
+    font-family: "BodoniW01-PosterItalic";
+    font-size: 90px;
+    text-indent: 4px; }
+    /* line 18, sass/_chapter3.sass */
+    .chapter-3-working-for-the-nest-egg article .chapter_title h2 span {
+      text-shadow: none;
+      background: white;
+      color: #383838;
+      display: block;
+      font-family: "Bodoni MT W01";
+      font-size: 24px;
+      margin: 0 auto;
+      padding: 0.5em 0 0.4em;
+      text-indent: 0;
+      width: 820px; }
 
 /* line 4, sass/_chapter4.sass */
 .chapter-4-working-in-retirement article .how_long_work .under_65 {
