--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -37,7 +37,7 @@
     padding: 24em 0 2em 0
 
     .background_image
-      background-image: image-url('1/path.jpg')
+      background-image: image-url('1/park-medium.jpg')
 
   .percentage_of_workers
     p
@@ -127,8 +127,7 @@
     @extend .spread
 
     .background_image
-      background-image: image-url('1/grumpy_man.jpg')
-      // background-position: 70% center
+      background-image: image-url('1/grump-large.jpg')
 
     p
       @include boxed(#fff, left, third, centered)
@@ -163,7 +162,7 @@
     @extend .spread
 
     .background_image
-      background-image: image-url('1/jars.jpg')
+      background-image: image-url('1/jars-large.jpg')
 
     p
       @extend .major
@@ -172,15 +171,10 @@
   .working_about_the_right_amount
     @extend .quotation.left
 
-    .contents
-      background-image: image-url('1/quoter.jpg')
-
   .quotation.paul
     //
 
   .outro
-    @extend .half-width
-
     .second
       font-family: $caslon-bold
       font-size: $font-size*1.3
