--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -161,7 +161,7 @@ section
     .contents
       @include clearfix
       background-repeat: no-repeat
-      padding: 6em 0
+      padding: 8em 0
 
     blockquote
       background: $green
@@ -171,15 +171,21 @@ section
       width: 50%
 
       p
-        font-size: $font-size*1.2
+        font-size: $font-size * 1.2
         margin-top: 0
 
     cite
-      font-size: $font-size*0.9
+      display: block
+      font-size: $font-size * 0.95
+      margin-left: 1.5em
 
       strong
         display: block
-        font-size: $font-size
+        font-family: $caslon-bold
+        font-size: 18px
+        font-weight: normal
+        text-indent: -1.25em
+        text-transform: uppercase
 
     &.left
       float: left
@@ -197,11 +203,11 @@ section
         @include triangle-left(25px, $green)
 
       .contents
-        background-position: left
+        background-position: left center
 
     &.paul
       .contents
-        background-image: image-url('1/paul.jpg')
+        background-image: image-url('person-paul_solman.jpg')
         background-repeat: no-repeat
         background-position: 0 8em
 
@@ -209,6 +215,36 @@ section
         float: right
         width: 75%
         @include triangle-left(25px, $green, 10%)
+
+    &.dante_chinni .contents
+      background-image: image-url('person-dante_chinni.jpg')
+
+    &.jack_vanderhei .contents
+      background-image: image-url('person-jack_vanderhei.jpg')
+
+    &.julie_zissimopoulos .contents
+      background-image: image-url('person-julie_zissimopoulos.jpg')
+
+    &.marc_freedman .contents
+      background-image: image-url('person-marc_freedman.jpg')
+
+    &.diane_oakley .contents
+      background-image: image-url('person-diane_oakley.jpg')
+
+    &.nancy_goldberg .contents
+      background-image: image-url('person-nancy_goldberg.jpg')
+
+    &.paula_gjerstad .contents
+      background-image: image-url('person-paula_gjerstad.jpg')
+
+    &.robert_martin .contents
+      background-image: image-url('person-robert_martin.jpg')
+
+    &.sheryl_garrett .contents
+      background-image: image-url('person-sheryl_garrett.jpg')
+
+    &.traer_sunley .contents
+      background-image: image-url('person-traer_sunley.jpg')
 
   &.video    
     .contents
